# DMP_simple

./: CMakeLists.txt  Dynamic movement primitive参数分析.docx  README.md
include/: dmp.h  dmp_struct.h  fourier_approx.h  function_approx.h  linear_approx.h  radial_approx.h
src/: dmp_using.cpp
src/dmp/: dmp.cpp  fourier_approx.cpp  linear_approx.cpp  radial_approx.cpp
trajectory_data/demo_trajectory/: sinx.txt
trajectory_data/plan_trajectory/: test_v.txt    test_x.txt
